Polish DefaultClientResponseTests and suppress "unchecked" warnings